// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackState matches forest theme snapshot 1`] = `
<View
  accessibilityLabel="X"
  accessible={true}
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "gap": 8,
      "paddingBottom": 24,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 24,
    }
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      {
        "color": "#14281A",
        "fontFamily": "Inter, Helvetica, Arial, sans-serif",
        "fontSize": 17,
        "fontWeight": "bold",
        "letterSpacing": -0.2,
        "lineHeight": 22,
        "textAlign": "center",
      }
    }
    suppressHighlighting={true}
  >
    X
  </Text>
</View>
`;

exports[`FeedbackState matches midnight theme snapshot 1`] = `
<View
  accessibilityLabel="Error"
  accessible={true}
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "gap": 16,
      "paddingBottom": 24,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 24,
    }
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      {
        "color": "#FF6B5E",
        "fontFamily": "Inter, Helvetica, Arial, sans-serif",
        "fontSize": 17,
        "fontWeight": "bold",
        "letterSpacing": -0.2,
        "lineHeight": 22,
        "textAlign": "center",
      }
    }
    suppressHighlighting={true}
  >
    Error
  </Text>
</View>
`;

exports[`FeedbackState matches sunrise theme snapshot 1`] = `
<View
  accessibilityLabel="Nothing here"
  accessible={true}
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "gap": 16,
      "justifyContent": "center",
      "paddingBottom": 24,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 24,
    }
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      {
        "color": "#271F15",
        "fontFamily": "Inter, Helvetica, Arial, sans-serif",
        "fontSize": 17,
        "fontWeight": "bold",
        "letterSpacing": -0.2,
        "lineHeight": 22,
        "textAlign": "center",
      }
    }
    suppressHighlighting={true}
  >
    Nothing here
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      {
        "color": "#786E5D",
        "fontFamily": "Inter_400Regular",
        "fontSize": 14,
        "letterSpacing": 0,
        "lineHeight": 20,
        "maxWidth": 320,
        "textAlign": "center",
      }
    }
    suppressHighlighting={true}
  >
    Add your first item
  </Text>
</View>
`;
